--- a/Css/Sass/colors.sass
+++ b/Css/Sass/colors.sass
@@ -1,16 +1,16 @@
 @import 'variables'
 
-.blue 
-	background: $blue
-	color: $white 
+// .blue 
+// 	background: $blue !important 
+// 	color: $white !important 
 
-.green 
-	background: $green 
-	color: $white 
+// .green 
+// 	background: $green !important
+// 	color: $white !important
 
-.red 
-	background: $red 
-	color: $white 
+// .red 
+// 	background: $red !important
+// 	color: $white !important
 
 .text-white 
 	color: $white !important 
