--- a/Css/Sass/layout.sass
+++ b/Css/Sass/layout.sass
@@ -3,6 +3,7 @@
 
 html 
 	height: 100vh
+	
 .col-1
 	width: 8.33%
 .col-2
@@ -38,7 +39,7 @@ div.cr-inline
 	margin-right: 0.2rem
 
 .cr.container
-	height: 100%
+	height: 100vh
 	margin-top: 5px
 	margin-bottom: 5px
 	margin-right: auto 
@@ -48,18 +49,18 @@ div.cr-inline
 
 	@media screen and (max-width: 767px)
 		width: auto
-		max-width: 90%
+		max-width: 90% !important 
 
 	@media screen and (min-width: 768px)
 		width: 750px
-		max-width: 90%
+		max-width: 90% !important 
 
 	@media screen and (max-width: 1199px) and (min-width: 992px)
 		width: 970px
 		margin-left: 25px
-		max-width: 90%
+		max-width: 90% !important 
 
 	@media screen and (min-width: 1200px)
 		width: 1170px
 		margin-left: 35px
-		max-width: 90%
+		max-width: 90% !important 
