Mejorado denuevo los cars y corregido algunos bugs al variar el tamano de la pantalla, es preciso mejorar las cards de diferentes tamanos para ofrecer diversas acciones entre animaciones, contenido dinamico, e imagenes dentro de ellas, de esta manera se puede lograr un componente mucho mas completo, posteriormente se debe proseguir  con los modals que en teoria son lo mismo

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -353,6 +353,10 @@ button.cr.button
 	&:active 
 		background: lighten($gray, 20) !important
 
+
+	&:active 
+		background: lighten($gray, 20) !important 
+
 .cr.simple.button.blue 
 	color: $blue 
 	.ripple 
