Corregido error en las cards que ya funcionan en un 80%

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -351,30 +351,25 @@ button.cr.button
 	.ripple 
 		background: $gray
 	&:active 
-		background: lighten($gray, 20) !important
-
-
-	&:active 
-		background: lighten($gray, 20) !important 
+		background: lighten($gray, 30) !important 
 
 .cr.simple.button.blue 
 	color: $blue 
 	.ripple 
-		background: $blue 
-	&:active 
-		background: lighten($gray, 20) !important
+		background: $blue
+
 
 .cr.simple.button.white 
 	color: $white 
 	.ripple
 		background: $white
-
-
-
+	&:active 
+		background: none !important 
+		
 .cr.simple.button.red 
 	color: $red 
 	.ripple 
-		background: $red 
+		background: $red
 
 .cr.simple.button.gold 
 	color: $gold 
